2014-01-15  Jeff Law  <law@redhat.com>

	PR tree-optimization/59747
	* gcc.c-torture/execute/pr59747.c: New test.

2014-01-15  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/59794
	* c-c++-common/convert-vec-1.c: Also prune ABI change for
	Linux/x86.
	* g++.dg/cpp0x/constexpr-53094-2.C: Likewise.
	* g++.dg/ext/attribute-test-1.C: Likewise.
	* g++.dg/ext/attribute-test-2.C: Likewise.
	* g++.dg/ext/attribute-test-3.C: Likewise.
	* g++.dg/ext/attribute-test-4.C: Likewise.
	* g++.dg/ext/pr56790-1.C: Likewise.
	* g++.dg/torture/pr38565.C: Likewise.
	* gcc.dg/pr53060.c: Likewise.
	* c-c++-common/scal-to-vec2.c: Add -msse2 for x86.
	* c-c++-common/vector-compare-2.c: Likewise.
	* gcc.dg/Wstrict-aliasing-bogus-ref-all-2.c: Likewise.
	* g++.dg/conversion/simd1.C: Add -msse2 for x86.  Adjust
	dg-message line number.

2014-01-15  Matthias Klose  <doko@ubuntu.com>

	* go.test/go-test.exp: Set goarch for aarch64*-*-*.

2014-01-15  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/59822
	* g++.dg/torture/pr59822.C: New testcase.

2014-01-15  Kirill Yukhin  <kirill.yukhin@intel.com>

	PR target/59808
	* gcc.target/i386/sse-12.c: Add `-mavx512[cd, er, pf]' options.
	* gcc.target/i386/sse-14.c: Fix PR59808.

2014-01-15  Matthew Gretton-Dann  <matthew.gretton-dann@linaro.org>
	    Kugan Vivekanandarajah  <kuganv@linaro.org>

	PR target/59695
	* g++.dg/pr59695.C: New testcase.

2014-01-15  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	PR target/59803
	* gcc.c-torture/compile/pr59803.c: New testcase.

2014-01-15  Jakub Jelinek  <jakub@redhat.com>

	PR c/58943
	* gcc.c-torture/execute/pr58943.c: New test.
	* gcc.dg/tree-ssa/ssa-fre-33.c (main): Avoid using += in the test.

2014-01-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/59794
	* g++.dg/ext/vector23.C: Also prune ABI change for Linux/x86.
	* gcc.target/i386/pr39162.c (y): New __m256i variable.
	(bar): Change return type to void.  Set y to x.
	* gcc.target/i386/pr59794-1.c: New testcase.